Avoid flickering when elements enter the review panel.

--- a/services/web/public/stylesheets/app/editor/review-panel.less
+++ b/services/web/public/stylesheets/app/editor/review-panel.less
@@ -261,6 +261,7 @@
 		}
 	}
 	.rp-state-current-file-expanded & {
+		visibility: hidden;
 		left: 5px;
 		right: 5px;
 		width: auto;
